--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 body{
     display: block;
     margin: none;
     font-family: 'Roboto', sans-serif; 
+    
+}
+section{
+    height: 400px;
+    padding-bottom: 120px;
 }
 .navbar{
     padding: 35px;
@@ -10,18 +16,79 @@ body{
 .nav{
     
     text-decoration: none;
-    font-weight:500;
+    font-weight:600;
     color: rgba(60, 60, 60, 1);
-    font-size: 24px;
-    margin-right: 24px;
+    font-size: 16px;
+    padding-right: 24px;
     font-family: 'Roboto', sans-serif;
 }
 h1{
-    font-size: 80px;
+    font-size: 100px;
     font-family: 'Bebas Neue', sans-serif; 
-    font-weight: 700;
+    font-weight: 600;
+    text-shadow: 0px 8px 5px lightgray;
+    line-height: 20px ;
+}
+h2{
+    font-size: 48px;
+    color:rgba(54, 57, 88, 1);
+}
+h3{
+    font-size: 24px;
+    color:rgba(54, 57, 88, 1);
+}
+p{
+    font-size: 16px;
+    padding-bottom: 40px;
+    color: rgba(62, 62, 62, 1);
 }
 .text-hightlighter{
     color:rgba(255, 131, 103, 1);
     
+}
+.link-button{
+    text-decoration: none;
+    padding: 15px;
+    background-image: linear-gradient(45deg
+, rgb(238, 42, 42), rgb(247, 99, 73));
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+.half-width img{
+    
+    width: 100%;
+}
+.half-width{
+
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding: 2%;
+}
+section h2{
+    text-align: center;
+}
+.project-area{
+    background:rgba(248, 249, 252, 1) ;
+    height: 700px;
+    padding-top: 120px;
+    
+}
+.projects{
+
+    padding:120px;
+   
+}
+.blog{
+    width: 25%;
+    float: left;
+    margin-left: 35px;
+    padding:17px;
+    border-radius: 20px;
+    box-shadow: 2px 10px 20px lightgray;
+   
+}
+.blog img{
+    width: 100%;
 }
