--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ p{
     border: none;
     border-radius: 5px;
     color: white;
+    box-shadow: 2px 1px 8px rgb(92, 91, 91);
+    
 }
 .half-width img{
     
@@ -95,6 +97,7 @@ section h2{
 .work-area{
 padding: 15%;
  align-items: center;
+ justify-content: space-between;
 }
 .work-area img{
     width: 906px;
@@ -104,14 +107,52 @@ padding: 15%;
 .work-half-width h3{
     font-family: 'Bebas Neue', sans-serif;
     color: white; 
-    font-size:64px
+    font-size:48px
 }
 .work-inquiry{
     position: relative;
+    width: 100%;
+   
 }
+
 .work-half-width{
     width:40%;
-    padding: 2% 4%;
     float: left;
+    margin-left: 10%;
+    margin-top: 3%;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.work-button{
+    margin-top: 10%;
+}
+
+.single-experience{
+    border-radius: 5px;
+    box-shadow:10px 10px 40px grey;
+    padding: 25px;
+   
+}
+.experienc-area{
+    background-image: url(shapes/exp-bg.png);
+    background-position: left;
+    background-repeat: no-repeat;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato)
+    ;
+    border-image-slice: 1;
+}
+footer{
     text-align: center;
+    padding: 70px;
+}
+
+footer h5{
+    font-size: 24px;
+    color: gray;
+    font-family:  'Bebas Neue', sans-serif;
+    font-weight: 500;
 }
